# review-sentiment-analysis

./: .gitignore  README.md  requirements.txt
back/: .env.example  main.py  pipeline.py  pyproject.toml  schemas.py  service.py
front/: .env.example  package-lock.json  package.json
front/src/: App.css  App.jsx
