[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.121.1",
    "onnxruntime>=1.23.2",
    "sentencepiece>=0.2.1",
    "streamlit>=1.51.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
]
